hdf5-derive/tests/compile-fail/struct-no-repr.stderr
error: `H5Type` requires repr(C), repr(packed) or repr(transparent) for structs
 --> $DIR/struct-no-repr.rs:7:8
  |
7 | struct Foo {
  |        ^^^
